[package]
name = "doom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.10"
png = "0.16"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = { version = "2", features = ["log"] }
vulkanalia = { version = "=0.12.0", features = ["libloading", "window"] }
winit = "0.24"


[build-dependencies]
anyhow = "1.0.65"